infra/k8s/posts-old.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: posts
spec: 
  containers:
    - name: posts
      image: dani100/post-service
      imagePullPolicy: Never 
# this imagePullPolicy values are "Always", "IfNotPresent" OR "Never"
