infra/k8s/client-depl.yaml
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec: 
  selector: 
    app: client
  type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 4001
      targetPort: 4001
