infra/k8s/comments-depl.yaml
apiVersion: v1
kind: Service
metadata: 
  name: comments-srv
spec: 
  selector: 
    app: comments
  type: ClusterIP
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
