infra/k8s/moderation-depl.yaml
apiVersion: v1
kind: Service
metadata: 
  name: moderation-srv
spec: 
  selector: 
    app: moderation
  type: ClusterIP
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
