infra/k8s/query-depl.yaml
apiVersion: v1
kind: Service
metadata: 
  name: query-srv
spec: 
  selector: 
    app: query
  type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
